bk_ida/gccida/c3/restore_emit_status
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/restore_emit_status/src/emit-rtl.c:2731:12: error: expected expression
*( _OWORD *)sequence_result = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/restore_emit_status/src/emit-rtl.c:2731:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)sequence_result = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/restore_emit_status/src/emit-rtl.c:2732:12: error: expected expression
*( _OWORD *)&sequence_result[2] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/restore_emit_status/src/emit-rtl.c:2732:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&sequence_result[2] = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/restore_emit_status/src/obj/emit-rtl.o] Error 1
